[tool.poetry]
name = "repl_python3_beta_Waikato-Air-Program"
version = "0.1.0"
description = ""
authors = ["shemaiah17047 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
inquirer = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
